<resources>
    <string name="app_name">BrainFood</string>

    <!-- Strings related to authentication -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="question_login">Already have an account? Login!</string>
    <string name="question_register">Don\'t have an account? Sign up!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to bottom bar -->
    <string name="tab_home">Home</string>
    <string name="tab_account">Profile</string>
    <string name="tab_search">Search</string>
    <string name="tab_meal_plan">Plan</string>
    <string name="tab_browse">Browse</string>

    <!-- Strings related to permission dialogs -->
    <string name="permission_read_storage_rationale">This app needs access to your storage so it can show your pictures.</string>
    <string name="permission_read_storage_denied">Denied permission to display images</string>
    <string name="permission_write_storage_rationale">This app needs to be able to write to your storage so it can save your pictures to it.</string>
    <string name="permission_write_storage_denied">Denied permission to save images</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_deny">Deny</string>

    <!-- Strings related to login/register messages -->
    <string name="error_occurred">An error occurred</string>
    <string name="success_register">Successfully registered</string>
    <string name="success_login">Successfully logged in</string>
    <string name="error_login_session_invalid">Your login session is no longer valid. Please log in again!</string>
    <string name="error_login_invalid">Invalid username/password combination</string>

    <!-- Strings related to toolbar -->
    <string name="description_profile">Profile</string>
    <string name="description_settings">Settings</string>
    <string name="message_not_logged_in">Doesn\'t seem like you\'re logged in…</string>

    <!-- Strings related to recipes -->
    <string name="more_nutritional_info">More nutritional info…</string>
    <string name="header_ingredients">Ingredients</string>
    <string name="header_nutrition">Nutritional Facts</string>
    <string name="action_like">Like</string>
    <string name="action_add_meal_plan">Add To Meal Plan</string>
    <string name="action_remove_meal_plan">Remove From Meal Plan</string>
    <string name="title_add_meal_plan_question">Which meal(s) would you like to add this recipe to?</string>
    <string name="title_remove_meal_plan_question">Which meal would you like to remove this recipe from?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>

    <!-- Strings related to search -->
    <string name="prompt_search">Search for recipes…</string>
    <string name="title_results">Results</string>
    <string name="title_search">Search</string>

    <!-- Strings related to home page -->
    <string name="message_home">%s! In the mood for some new %s ideas?</string>
    <string name="greeting_morning">Good morning %s</string>
    <string name="greeting_afternoon">Good afternoon %s</string>
    <string name="greeting_evening">Good evening %s</string>
    <string name="meal_breakfast">breakfast</string>
    <string name="meal_lunch">lunch</string>
    <string name="meal_dinner">dinner</string>
    <string name="title_top_picks">Top Picks</string>
    <string name="title_recommended_meals">Recommended Meals</string>
    <string name="error_fail_top_recipes">Failed to get top recipes</string>
    <string name="error_fail_recommended_recipes">Failed to get your recipes</string>

    <!-- Strings related to profile -->
    <string name="message_profile">Here are the things we know about you, nothing too creepy.</string>
    <string name="title_profile">Profile</string>
    <string name="title_progress">Daily Progress</string>
    <string name="subtitle_macros">Macros</string>
    <string name="title_pinned_meals">Pinned Meals</string>

    <!-- Strings related to meal planning -->
    <string name="title_breakfast">Breakfast</string>
    <string name="title_lunch">Lunch</string>
    <string name="message_meal_plan">Here\'s a little meal plan I cooked up today!</string>
    <string name="title_meal_plan">Meal Plan</string>

    <!-- Strings related to setup -->
    <string name="message_setup_1">Fill in the following information, it\'ll help us figure out how to feed you!</string>
    <string name="prompt_age">Age</string>
    <string name="subheading_dietary_restrictions">Dietary Restrictions</string>
    <string name="title_activity_setup_info">Settings</string>
    <string name="pref_vegan">Vegan</string>
    <string name="pref_vegetarian">Vegetarian</string>
    <string name="pref_allergy_peanut">Peanut Allergy</string>
    <string name="error_vegan_or_vegetarian">Please select either vegan or vegetarian</string>
    <string name="action_next_step">Next Step</string>
    <string name="message_setup_2">To start, select at least 3 of the meals that you think you\'d enjoy eating!</string>
    <string name="header_random_meals">Random Meals</string>
    <string name="pref_key_name">name</string>
    <string name="pref_key_has_peanut_allergy">has_peanut_allergy</string>
    <string name="pref_key_is_vegetarian">is_vegetarian</string>
    <string name="pref_key_is_vegan">is_vegan</string>
    <string name="error_setup_name">Name cannot be empty!</string>
    <string name="error_setup_3_recipes">You must select 3 recipes to continue!</string>
    <string name="loading_message_1">Tossing some salads…</string>

    <!-- Strings related to settings -->
    <string name="pref_password_current">Current Password</string>
    <string name="pref_password_new">New Password</string>
    <string name="pref_key_password_current">current_password</string>
    <string name="pref_key_password_new">new_password</string>
    <string name="message_unsaved_changes">If you leave now, your changes will not be saved. Do you still want to leave?</string>
    <string name="title_unsaved_changes">Unsaved Changes</string>
    <string name="action_dialog_leave">Leave anyways</string>
    <string name="action_dialog_stay">Stay</string>
    <string name="title_settings">Settings</string>
    <string name="msg_saved_changes">Saved changes successfully!</string>
    <string name="action_logout">Logout</string>
    <string name="msg_submitting_changes">Submitting changes…</string>
    <string name="msg_empty_search_query">You haven\'t searched for anything</string>
    <string name="msg_error_no_results">We couldn\'t find anything</string>
    <string name="msg_empty_meal_plan">You haven\'t added anything to your meal plan yet</string>

</resources>
