<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <club.bweakfast.foodora.setup.SetupInputPreference
        android:inputType="textPersonName"
        android:key="@string/pref_key_name"
        android:title="@string/prompt_name"
        app:inputWidth="128dp" />

    <PreferenceCategory android:title="@string/subheading_dietary_restrictions">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_is_vegan"
            android:layout="@layout/pref_setup_checkbox"
            android:paddingTop="8dp"
            android:title="@string/pref_vegan" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_is_vegetarian"
            android:layout="@layout/pref_setup_checkbox"
            android:title="@string/pref_vegetarian" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_has_peanut_allergy"
            android:layout="@layout/pref_setup_checkbox"
            android:title="@string/pref_allergy_peanut" />

    </PreferenceCategory>
</PreferenceScreen>
