<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/tab_browse"
        android:icon="@drawable/ic_food_apple"
        android:title="@string/tab_browse" />
    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_magnify"
        android:title="@string/tab_search" />
    <item
        android:id="@+id/tab_plan"
        android:icon="@drawable/ic_food_fork_drink"
        android:title="@string/tab_meal_plan" />
    <item
        android:id="@+id/tab_account"
        android:icon="@drawable/ic_account"
        android:title="@string/tab_account" />
</menu>