<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollingToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:contentInsetStart="0dp"
    app:layout_collapseMode="pin"
    app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_outline" />

        <TextView
            android:id="@+id/titleTxt"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_settings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings_outline" />

        <FrameLayout
            android:id="@+id/messageSearchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toRightOf="@id/profileIcon"
            app:layout_constraintRight_toLeftOf="@id/settingsIcon"
            app:layout_constraintTop_toBottomOf="@id/profileIcon">

            <TextView
                android:id="@+id/messageTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:textColor="@color/materialGray"
                android:visibility="visible"
                tools:text="Good morning Sarah! In the mood for some new breakfast ideas?"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/searchBox"
                style="@style/EditTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_search_box"
                android:hint="@string/prompt_search"
                android:inputType="textAutoCorrect"
                android:padding="8dp"
                android:visibility="gone"
                tools:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/notLoggedInMsg"
            style="@style/ColoredElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/message_not_logged_in"
            app:layout_constraintTop_toBottomOf="@id/messageSearchLayout" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.Toolbar>